:white_check_mark:

--- a/excel-list.html
+++ b/excel-list.html
@@ -81,7 +81,7 @@
           <thead>
             <tr><th title="序号">序号</th><th title="函数名">函数名</th><th title="描述">描述</th><th title="链接">链接</th><th title="是否完成">是否完成</th><th title="备注">备注</th></tr>
           </thead>
-          <tbody><tr><td >1</td><td >ENCODEURL</td><td >--</td><td ><a href="--">ENCODEURL</a></td><td >否</td><td >--</td></tr><tr><td >2</td><td >FILTERXML</td><td >--</td><td ><a href="--">FILTERXML</a></td><td >否</td><td >--</td></tr><tr><td >3</td><td >WEBSERVICE</td><td >--</td><td ><a href="--">WEBSERVICE</a></td><td >否</td><td >--</td></tr></tbody>
+          <tbody><tr><td >1</td><td >ENCODEURL</td><td >ENCODEURL函数返回 URL 编码的字符串，用百分比符号（%）替换某些非字母数字字符和一个十六进制数字。</td><td ><a href="https://support.microsoft.com/zh-cn/office/encodeurl-%E5%87%BD%E6%95%B0-07c7fb90-7c60-4bff-8687-fac50fe33d0e">ENCODEURL</a></td><td >否</td><td >--</td></tr><tr><td >2</td><td >FILTERXML</td><td >FILTERXML 函数使用指定的 xpath 从 XML 内容返回特定数据。<br>Mac中不可用</td><td ><a href="https://support.microsoft.com/zh-cn/office/filterxml-%E5%87%BD%E6%95%B0-4df72efc-11ec-4951-86f5-c1374812f5b7">FILTERXML</a></td><td >否</td><td >--</td></tr><tr><td >3</td><td >WEBSERVICE</td><td >WEBSERVICE函数从 Internet 或 Intranet 上的 web 服务返回数据。<br>Mac中不可用</td><td ><a href="https://support.microsoft.com/zh-cn/office/webservice-%E5%87%BD%E6%95%B0-0546a35a-ecc6-4739-aed7-c0b7ce1562c4">WEBSERVICE</a></td><td >否</td><td >--</td></tr></tbody>
         </table>
       </details>
 
