:sparkles: 完成逻辑组函数

--- a/excel-list.html
+++ b/excel-list.html
@@ -34,7 +34,7 @@
           }
       </style>
   </head>
-  <body>EXCEL 2016 函数 完成率:2.5%
+  <body>EXCEL 2016 函数 完成率:4.6%
       <details >
       <summary><font size="5">日期和时间</font></summary>
         <table class="gridtable">
@@ -61,7 +61,7 @@
           <thead>
             <tr><th title="序号">序号</th><th title="函数名">函数名</th><th title="描述">描述</th><th title="链接">链接</th><th title="是否完成">是否完成</th><th title="备注">备注</th></tr>
           </thead>
-          <tbody><tr><td >1</td><td >AND</td><td >--</td><td ><a href="--">AND</a></td><td >否</td><td >--</td></tr><tr><td >2</td><td >FALSE</td><td >--</td><td ><a href="--">FALSE</a></td><td >否</td><td >--</td></tr><tr><td >3</td><td >IF</td><td >--</td><td ><a href="--">IF</a></td><td >否</td><td >--</td></tr><tr><td >4</td><td >IFERROR</td><td >--</td><td ><a href="--">IFERROR</a></td><td >否</td><td >--</td></tr><tr><td >5</td><td >IFNA</td><td >--</td><td ><a href="--">IFNA</a></td><td >否</td><td >--</td></tr><tr><td >6</td><td >NOT</td><td >--</td><td ><a href="--">NOT</a></td><td >否</td><td >--</td></tr><tr><td >7</td><td >OR</td><td >--</td><td ><a href="--">OR</a></td><td >否</td><td >--</td></tr><tr><td >8</td><td >TRUE</td><td >--</td><td ><a href="--">TRUE</a></td><td >否</td><td >--</td></tr><tr><td >9</td><td >XOR</td><td >--</td><td ><a href="--">XOR</a></td><td >否</td><td >--</td></tr></tbody>
+          <tbody><tr><td >1</td><td >AND</td><td >--</td><td ><a href="--">AND</a></td><td >完成</td><td >--</td></tr><tr><td >2</td><td >FALSE</td><td >--</td><td ><a href="--">FALSE</a></td><td >完成</td><td >--</td></tr><tr><td >3</td><td >IF</td><td >--</td><td ><a href="--">IF</a></td><td >完成</td><td >--</td></tr><tr><td >4</td><td >IFERROR</td><td >--</td><td ><a href="--">IFERROR</a></td><td >完成</td><td >--</td></tr><tr><td >5</td><td >IFNA</td><td >--</td><td ><a href="--">IFNA</a></td><td >完成</td><td >--</td></tr><tr><td >6</td><td >NOT</td><td >--</td><td ><a href="--">NOT</a></td><td >完成</td><td >--</td></tr><tr><td >7</td><td >OR</td><td >--</td><td ><a href="--">OR</a></td><td >完成</td><td >--</td></tr><tr><td >8</td><td >TRUE</td><td >--</td><td ><a href="--">TRUE</a></td><td >完成</td><td >--</td></tr><tr><td >9</td><td >XOR</td><td >--</td><td ><a href="--">XOR</a></td><td >完成</td><td >--</td></tr></tbody>
         </table>
       </details>
 
